# vibe-kit

./: .gitignore  LICENSE  NOTICE  README.md  roadmap.md  telemetry.jsonl
.devcontainer/: README.md  devcontainer.json  postCreateCommand.sh
.github/agents/: event_agent.agent.md
1-foundations/: event-agent-architecture.md  principles.md  problem-spaces.md
2-inspiration/: agent-capability-cards.md  copilot-examples.md  ignite-2025-summary.md  patterns.md
3-starters/: evaluation-checklists.md  prompt-starters.md
3-starters/agent-personas/: admin-governance-agent.md  edge-browsing-agent.md  msr-event-guide.md  research-synthesis-agent.md
4-mcp/: foundry-mcp-tool-catalog.md  graph-connectors.md  mcp-tool-blueprints.md  windows-mcp-connectors.md
6-resources/: copilot-design-guidelines.md  links-book-of-news.md  official-docs.md
eventkit/: EVENT_KIT.md  MANIFEST.yml  QUICKSTART.md  README.md  agent.json  agent.py  agent.schema.json  pyproject.toml  telemetry.py
eventkit/assets/: sample_itinerary.md  sessions_external.json
eventkit/docs/: application-patterns.md  data-integration.md  evaluation.md  governance.md  openapi-snippet.yaml  performance-guide.md  technical-guide.md  troubleshooting.md
eventkit/scripts/: evaluate_profiles.py  export_itinerary.py  generate_sessions_template.py  summarize_telemetry.py
eventkit/tests/: test_explain.py  test_export.py  test_external_sessions.py  test_profile.py  test_recommend.py  test_server.py  test_telemetry.py
exports/: itinerary_agents_ai safety.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml
innovation-kit-repository/aurora-finetune/starter-code/: README.md  pyproject.toml
innovation-kit-repository/aurora-finetune/starter-code/src/vibe_tune_aurora/: aurora_module.py  config.py  evaluation.py  training.py
innovation-kit-repository/aurora-finetune/starter-code/src/vibe_tune_aurora/cli/: evaluate.py  train.py  visualize.py
innovation-kit-repository/aurora-finetune/starter-code/src/vibe_tune_aurora/data_fetching/: __init__.py  climate_data_store_fetching.py
innovation-kit-repository/aurora-finetune/starter-code/src/vibe_tune_aurora/data_processing/: data_utils.py
innovation-kit-repository/aurora-finetune/starter-code/tests/: test_evaluation.py  test_training.py
innovation-kit-repository/aurora-finetune/starter-code/tests/cli/: test_cli_train.py
innovation-kit-repository/aurora-finetune/starter-code/tests/data_fetching/: test_climate_data_store_fetching.py
innovation-kit-repository/aurora-finetune/starter-code/tests/inputs/: era5_single_level_western_usa_jan_8_to_14.grib
innovation-kit-repository/event-agent/starter-code/agents_sdk_integration/: README.md  __init__.py  activities.py  adaptive_cards.py  agent_container.py  auth.py  event_handler.py  graph_sources.py  integration_telemetry.jsonl  integration_telemetry.py  pyproject.toml  run_agent.py  session_cache.py  settings.py  storage.py  test_mvp.py
vibekit-cli/: pyproject.toml
vibekit-cli/src/: cli.py  github_repo.py  manifests.py  repo.py
vibekit-cli/src/commands/: common.py  init_cmd.py  install_cmd.py  list_cmd.py  uninstall_cmd.py  update_cmd.py
vibekit-cli/tests/: conftest.py
vibekit-cli/tests/integration/: test_init_in_place.py  test_init_verbose.py  test_install.py  test_install_unknown.py  test_list.py  test_repo_base_env.py  test_uninstall.py  test_uninstall_customizations.py  test_update.py  test_update_dry_run.py  test_update_noop.py
(+60 files in other folders)
