[project]
name = "eventkit"
version = "0.1.0"
description = "Event Kit agent: recommendation, explanation, telemetry, export"
authors = [ { name = "Vibe Kit" } ]
readme = "EVENT_KIT.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []

[project.scripts]
eventkit = "agent:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"