[project]
name = "vibe-tune-aurora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lightning>=2.5.1.post0",
    "matplotlib>=3.10.3",
    "microsoft-aurora>=1.5.2",
    "numpy>=2.2.6",
    "plotly>=6.1.2",
    "pygrib>=2.1.6",
    "tensorboard>=2.19.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
    "xarray>=2024.1.0",
    "netcdf4>=1.6.0",
    "cdsapi>=0.7.7",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/vibe_tune_aurora"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
markers = [
    "requires_cds_api_key: marks tests that call the CDS API (select with 'pytest -m requires_cds_api_key')",
]
